--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,83 @@
 <div class="container">
-    <div class="left">a</div>
+    <div class="left">
+        <div class="chart">
+            chart will be rendered
+        </div>
+        <div class="data_table">
+            <div class="dt_header">
+                <div class="buttons_group">
+                    <button>
+                        Target
+                    </button>
+                    <button>
+                        Target Types
+                    </button>
+                    <select>
+                        <option value="">Status</option>
+                        <option value="active">Active</option>
+                        <option value="inactive">Inactive</option>
+                        <option value="blocked">Blocked</option>
+                    </select>
+                    <select>
+                        <option value="">Send Via</option>
+                        <option value="Whatsapp">Whatsapp</option>
+                        <option value="SMS">SMS</option>
+                    </select>
+                </div>
+                <div class="search_and_date">
+                    <div class="search">
+                        <input type="search" placeholder="search messages">
+                        <img src="../../assets/icons/search.svg" alt="s">
+                    </div>
+                    <button>
+                        <img src="../../assets/icons/calendar.svg" alt="c">
+                    </button>
+                </div>
+            </div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Created Date</th>
+                        <th>Target Type</th>
+                        <th>Target</th>
+                        <th>Message Type</th>
+                        <th>Sent Via</th>
+                        <th>Status</th>
+                        <th>Messages</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Created Date</td>
+                        <td>Target Type</td>
+                        <td>Target</td>
+                        <td>Message Type</td>
+                        <td>Sent Via</td>
+                        <td>Status</td>
+                        <td>Messages</td>
+                    </tr>
+                    <tr>
+                        <td>Created Date</td>
+                        <td>Target Type</td>
+                        <td>Target</td>
+                        <td>Message Type</td>
+                        <td>Sent Via</td>
+                        <td>Status</td>
+                        <td>Messages</td>
+                    </tr>
+                    <tr>
+                        <td>Created Date</td>
+                        <td>Target Type</td>
+                        <td>Target</td>
+                        <td>Message Type</td>
+                        <td>Sent Via</td>
+                        <td>Status</td>
+                        <td>Messages</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
     <div class="right">
         <div class="stats">
             <div class="stats_header">
