--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,133 +1,11 @@
 <div class="container">
     <div class="left">
-        <div class="chart">
-            chart will be rendered
-        </div>
-        <div class="data_table">
-            <div class="dt_header">
-                <div class="buttons_group">
-                    <button>
-                        Target
-                    </button>
-                    <button>
-                        Target Types
-                    </button>
-                    <select>
-                        <option value="">Status</option>
-                        <option value="active">Active</option>
-                        <option value="inactive">Inactive</option>
-                        <option value="blocked">Blocked</option>
-                    </select>
-                    <select>
-                        <option value="">Send Via</option>
-                        <option value="Whatsapp">Whatsapp</option>
-                        <option value="SMS">SMS</option>
-                    </select>
-                </div>
-                <div class="search_and_date">
-                    <div class="search">
-                        <input type="search" placeholder="search messages">
-                        <img src="../../assets/icons/search.svg" alt="s">
-                    </div>
-                    <button>
-                        <img src="../../assets/icons/calendar.svg" alt="c">
-                    </button>
-                </div>
-            </div>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Created Date</th>
-                        <th>Target Type</th>
-                        <th>Target</th>
-                        <th>Message Type</th>
-                        <th>Sent Via</th>
-                        <th>Status</th>
-                        <th>Messages</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Created Date</td>
-                        <td>Target Type</td>
-                        <td>Target</td>
-                        <td>Message Type</td>
-                        <td>Sent Via</td>
-                        <td>Status</td>
-                        <td>Messages</td>
-                    </tr>
-                    <tr>
-                        <td>Created Date</td>
-                        <td>Target Type</td>
-                        <td>Target</td>
-                        <td>Message Type</td>
-                        <td>Sent Via</td>
-                        <td>Status</td>
-                        <td>Messages</td>
-                    </tr>
-                    <tr>
-                        <td>Created Date</td>
-                        <td>Target Type</td>
-                        <td>Target</td>
-                        <td>Message Type</td>
-                        <td>Sent Via</td>
-                        <td>Status</td>
-                        <td>Messages</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        <app-reports></app-reports>
+        <app-activity-details></app-activity-details>
     </div>
     <div class="right">
-        <div class="stats">
-            <div class="stats_header">
-                <h4>Statistic</h4>
-            </div>
-            <div class="stats_body">
-                <div class="cards">
-                    <div class="card" *ngFor="let card of cardsData">
-                        <img [src]="card.icon" [alt]="card.count">
-                        <p>{{card.label}}</p>
-                        <h5>{{card.count}}</h5>
-                    </div>
-                </div>
 
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th><strong>Channels</strong></th>
-                            <th><strong>Today</strong></th>
-                            <th><strong>15</strong> min</th>
-                            <th><strong>30</strong> min</th>
-                            <th><strong>60</strong> min</th>
-                            <th><strong>12</strong> hours</th>
-                            <th><strong>24</strong> hours</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Whatsapp</td>
-                            <td>Today</td>
-                            <td>15 min</td>
-                            <td>30 min</td>
-                            <td>60 min</td>
-                            <td>12 hours</td>
-                            <td>24 hours</td>
-                        </tr>
-                        <tr>
-                            <td>SMS</td>
-                            <td>Today</td>
-                            <td>15 min</td>
-                            <td>30 min</td>
-                            <td>60 min</td>
-                            <td>12 hours</td>
-                            <td>24 hours</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
+        <app-stats></app-stats>
         <!-- devices -->
         <div class="devices">
             <div class="d_header">
