--- a/src/app/devices/devices.component.css
+++ b/src/app/devices/devices.component.css
@@ -10,6 +10,8 @@
     box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
     padding: 1rem 1.5rem;
     height: 80vh;
+    position: sticky;
+    top: 1rem;
 }
 
 .sidebar h4 {
@@ -166,4 +168,85 @@
     box-shadow: 1px 3px 4px 2px rgba(0, 0, 0, 0.25);
     padding: 300px 3rem 2rem;
     transform: translateY(-150px);
+}
+
+.note {
+    margin: 1.5rem 0;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: -1px 0px 10px 2px rgba(0, 0, 0, 0.25);
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+}
+
+.note p {
+    max-width: 65ch;
+    text-align: center;
+}
+
+.tables {
+    display: flex;
+    margin-bottom: 1.5rem;
+    gap: 1.5rem;
+}
+
+.table_card {
+    flex: 1;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.tc_header {
+    border-radius: 5px;
+    border-bottom: 1px solid #B5B5B5;
+    background: #FFF;
+    padding: 1rem;
+}
+
+.tc_header h4 {
+    color: #161616;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    font-family: var(--jakarta);
+}
+
+.tc_body {
+    padding: 1rem;
+}
+
+.tc_body table {
+    border-radius: 5px;
+    border: 1px solid #E1E1E1;
+    background: #FFF;
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
+    width: 100%;
+}
+
+.tc_body thead tr {
+    border-radius: 5px;
+    border-bottom: 1px solid #E1E1E1;
+    background: #FFF;
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.tc_body th,
+.tc_body td {
+    padding: .7rem;
+    text-align: center;
+    color: #363535;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    font-family: var(--jakarta);
+}
+
+.tc_body td {
+    color: #111;
+    font-weight: 500;
+
 }
