--- a/src/app/components/messages-sidebar/messages-sidebar.component.html
+++ b/src/app/components/messages-sidebar/messages-sidebar.component.html
@@ -5,7 +5,7 @@
     <ul class="sb_menu">
         <li *ngFor="let item of sidebarMenu" class="sbm_item" [class.active]="item.active"
             (click)="toggleActive(item.id)">
-            <span>icon</span>
+            <img [src]="item .active ? item.icon_active : item.icon" alt="">
             <span>{{item.label}}</span>
         </li>
     </ul>
