update chart component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="left">
-        <app-reports></app-reports>
+        <!-- <app-reports></app-reports> -->
+        <app-multi-series-chart></app-multi-series-chart>
         <app-activity-details></app-activity-details>
     </div>
     <div class="right">
