--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -45,9 +45,8 @@
             <img src="../../assets/banner.svg" alt="banner" class="banner_img">
         </div>
         <div class="device_content">
-            <!-- <app-reports></app-reports> -->
             <div style="margin-bottom: 1.5rem;">
-                <app-multi-series-chart></app-multi-series-chart>
+                <app-reports></app-reports>
             </div>
 
             <app-stats [statsCardStyles]="'row'"></app-stats>
