--- a/src/app/components/reports/reports.component.html
+++ b/src/app/components/reports/reports.component.html
@@ -1,3 +1,6 @@
-<div class="chart">
-    chart will be rendered
+<div class="container">
+    <h4>Reports</h4>
+    <div class="chart_con">
+        <canvas id="lineChart"></canvas>
+    </div>
 </div>
