--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,6 @@
 <div class="container">
     <div class="left">
-        <!-- <app-reports></app-reports> -->
-        <app-multi-series-chart></app-multi-series-chart>
+        <app-reports></app-reports>
         <app-activity-details></app-activity-details>
     </div>
     <div class="right">
