--- a/src/app/components/activity-details/activity-details.component.html
+++ b/src/app/components/activity-details/activity-details.component.html
@@ -26,7 +26,7 @@
         </div>
         <div class="search_and_date" *ngIf="!showSearch">
             <div class="search">
-                <input type="search" placeholder="search messages">
+                <input type="search" placeholder="Search Messages">
                 <img src="../../assets/icons/search.svg" alt="s">
             </div>
             <button>
