--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
         <div class="devices">
             <div class="d_header">
                 <h4>Devices</h4>
-                <a href="/">View all</a>
+                <a routerLink="/devices">View all</a>
             </div>
             <div class="d_body">
                 <div class="d_card">
