--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,13 +12,14 @@
 
 .right {
     flex: 4.2;
+    min-width: 500px;
 }
 
 .d_header {
-    border-radius: 5px;
-    border-bottom: 1px solid #B5B5B5;
+    border-radius: 10px;
+    border-bottom: 1px solid #d6d6d6;
     background: #FFF;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 1px 2px 5px 0px rgba(165, 165, 165, 0.34);
     margin-top: .7rem;
     padding: 1rem 1.5rem;
     display: flex;
@@ -47,9 +48,9 @@
 
 .d_body {
     margin-top: 1rem;
-    border-radius: 5px;
+    border-radius: 10px;
     background: #FFF;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 1px 2px 5px 0px rgba(165, 165, 165, 0.34);
     padding: .5rem 1rem;
     display: flex;
     flex-direction: column;
@@ -61,7 +62,7 @@
 .d_card {
     border-radius: 5px;
     background: #FFF;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 1px 2px 5px 0px rgba(165, 165, 165, 0.34);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -104,4 +105,23 @@
 
 .d_card .status.active {
     background-color: #0B7A60;
+}
+
+@media screen and (max-width: 1500px) {
+    .container {
+        gap: 1rem;
+        padding: 1rem;
+    }
+
+    .d_header {
+        padding: .6rem 1rem;
+    }
+
+    .d_header h4 {
+        font-size: 1.25rem;
+    }
+
+    .d_body {
+        margin-top: .7rem;
+    }
 }
